# SeamCarving

./: CMakeLists.txt  README.md  main.cpp  resizing.cpp  resizing.h  tools.cpp  tools.h
